cluster/apps/glance/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glance-tailscale
  namespace: glance
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - home
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glance
                port:
                  number: 8080
